fix spacing

--- a/index.css
+++ b/index.css
@@ -42,7 +42,6 @@ mark {
 }
 
 .home-container02 {
-  margin: var(--dl-space-space-twounits);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -102,11 +101,15 @@ mark {
   margin-left: var(--dl-space-space-fourunits);
   margin-right: var(--dl-space-space-fourunits);
   flex-direction: column;
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 .home-image2 {
   width: 714px;
   object-fit: cover;
+  margin-top: 32px;
+
 }
 
 .home-container04 {
@@ -116,6 +119,8 @@ mark {
   align-items: center;
   margin-right: 0px;
   flex-direction: column;
+  margin-top: 32px;
+
 }
 
 .home-text03 {
@@ -257,7 +262,7 @@ mark {
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
-  padding-top: var(--dl-space-space-twounits);
+  padding-top: var(--dl-space-space-unit);
   padding-left: var(--dl-space-space-threeunits);
   padding-right: var(--dl-space-space-threeunits);
   flex-direction: column;
@@ -778,7 +783,7 @@ mark {
   .home-footer {
     width: 100%;
     align-self: stretch;
-    padding-top: var(--dl-space-space-fourunits);
+    padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
     padding-bottom: var(--dl-space-space-unit);
